--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ $(document).ready(function(){
 };
 
 $.ajax(settings).done(function (response) {
-	$("#result").html(response);
+	$("#result").html(JSON.stringify(response));
   console.log(response);
 });
 });
